err/cs.html.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cs'...
Compiling './lib/python3.5/site-packages/cs/__init__.py'...
Listing './lib/python3.5/site-packages/cs/py'...
Listing './lib/python3.5/site-packages/cs/py3'...
Compiling './lib/python3.5/site-packages/cs/py3/_for2.py'...
***   File "./lib/python3.5/site-packages/cs/py3/_for2.py", line 41
    except UnicodeDecodeError, ude:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cs.ansi_colour-20170902.egg-info'...
Listing './lib/python3.5/site-packages/cs.excutils-20170904.egg-info'...
Listing './lib/python3.5/site-packages/cs.html-20160828.egg-info'...
Listing './lib/python3.5/site-packages/cs.lex-20171231.egg-info'...
Listing './lib/python3.5/site-packages/cs.logutils-20171030.egg-info'...
Listing './lib/python3.5/site-packages/cs.obj-20170904.egg-info'...
Listing './lib/python3.5/site-packages/cs.pfx-20170903.1.egg-info'...
Listing './lib/python3.5/site-packages/cs.py.func-20170906.1.egg-info'...
Listing './lib/python3.5/site-packages/cs.py3-20170903.egg-info'...
Listing './lib/python3.5/site-packages/cs.tty-20170903.egg-info'...
Listing './lib/python3.5/site-packages/cs.upd-20170903.egg-info'...
Listing './lib/python3.5/site-packages/cs.x-20170902.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
